--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,6 +52,18 @@ header h1 {
     margin-bottom: 30px;
 }
 
+.button {
+    border: 2px solid #17c3b2;
+    color: #fe6d73;
+    background-color: #8f9491;
+}
+
+.button:hover {
+    border: 2px solid #fe6d73;
+    color: #17c3b2;
+    font-weight: bold;
+}
+
 .date {
     font-size: 30px;
     color: #8f9491;
